# llm-council

./: .env.docker  .env.sample  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
backend/: .dockerignore  Dockerfile  config.py  council.py  main.py  openrouter.py  storage.py  web_search.py
backend/tests/: README.md  conftest.py
backend/tests/e2e/: test_api.py  test_stage2_data.py
backend/tests/integration/: test_council.py  test_web_search.py  test_web_search_settings.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: ChatInterface.jsx  SettingsPage.jsx  Sidebar.css  Sidebar.jsx  Stage1.jsx  Stage2.jsx  Stage3.jsx
scripts/: verify-deployment.sh
